packages/css-engine/crates/aihu-css-core/tests/snapshots/scoped_snapshot__scoped_animate_spin_hoists_keyframes.snap
---
source: packages/css-engine/crates/aihu-css-core/tests/scoped_snapshot.rs
assertion_line: 70
expression: "compile_sfc_scoped(&sfc(\"animate-spin\")).unwrap()"
---
@layer aihu.reset, aihu.tokens, aihu.components, aihu.utilities;
*, ::before, ::after { border-style: solid; border-width: 0; }
.animate-spin { animation: spin 1s linear infinite; }
@keyframes spin { to { transform: rotate(360deg); } }
@media (prefers-reduced-motion: reduce) {
  .animate-spin:not([data-motion="always"]) {
    animation-duration: 1ms !important;
    animation-iteration-count: 1 !important;
    animation-delay: 0ms !important;
  }
}
