packages/css-engine/crates/aihu-css-core/tests/snapshots/scoped_snapshot__scoped_divide_y_nested_rule.snap
---
source: packages/css-engine/crates/aihu-css-core/tests/scoped_snapshot.rs
assertion_line: 62
expression: "compile_sfc_scoped(&sfc(\"divide-y-2\")).unwrap()"
---
@layer aihu.reset, aihu.tokens, aihu.components, aihu.utilities;
*, ::before, ::after { border-style: solid; border-width: 0; }
.divide-y-2 { & > * + * { border-block-width: 2px; } }
