packages/css-engine/crates/aihu-css-core/tests/snapshots/scoped_snapshot__scoped_space_y_nested_rule.snap
---
source: packages/css-engine/crates/aihu-css-core/tests/scoped_snapshot.rs
assertion_line: 53
expression: "compile_sfc_scoped(&sfc(\"space-y-4\")).unwrap()"
---
@layer aihu.reset, aihu.tokens, aihu.components, aihu.utilities;
*, ::before, ::after { border-style: solid; border-width: 0; }
.space-y-4 { & > * + * { margin-block-start: 1rem; } }
