packages/css-engine/crates/aihu-css-core/tests/snapshots/scoped_snapshot__scoped_with_authored_style_block.snap
---
source: packages/css-engine/crates/aihu-css-core/tests/scoped_snapshot.rs
expression: compile_sfc_scoped(&ast(json)).unwrap()
---
:host {
  --color-accent: #c8543a;
  --color-accent-foreground: #faf8f4;
  --color-background: #faf8f4;
  --color-border: #ddd9d2;
  --color-destructive: #a8432b;
  --color-destructive-foreground: #faf8f4;
  --color-foreground: #1a1d24;
  --color-muted: #5a5a55;
  --color-muted-foreground: #8a8880;
  --color-primary: #1a1d24;
  --color-primary-foreground: #faf8f4;
  --color-ring: #c8543a;
  --color-secondary: #5a5a55;
  --color-secondary-foreground: #faf8f4;
  --color-surface: #faf8f4;
  --color-surface-foreground: #1a1d24;
}
*, ::before, ::after { border-style: solid; border-width: 0; }
.p-4 { padding: 1rem; }
.shadow-md { box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1); }
/* authored @style (scoped) */
.inner {
  display: grid;
  gap: 1rem;
}
